# AnchorPoint

./: Cargo.toml  output.txt  package-lock.json  pull_request.md  run_output.txt  test_out.txt
backend/: package.json
backend/prisma/: dev.db  schema.prisma
backend/prisma/migrations/20260324124550_init/: migration.sql
backend/scripts/: check-migrations.js
backend/src/: index.ts
backend/src/api/middleware/: auth.middleware.ts
backend/src/api/routes/: sep24.route.ts
backend/src/config/: env.ts  sep31Fields.ts
backend/src/services/: auth.service.ts  kyc.service.test.ts  kyc.service.ts  webhook.service.ts
contracts/: Cargo.toml
contracts/nft_metadata/: Cargo.toml
contracts/nft_metadata/src/: lib.rs
contracts/yield/src/: lib.rs
src/auth/: Cargo.toml  rbac.rs
src/batch/: Cargo.toml  lib.rs  test.rs
src/escrow_multisig/: Cargo.toml  lib.rs
src/escrow_timelock/: Cargo.toml  lib.rs
src/flash_loan/: Cargo.toml  lib.rs  tests.rs
src/governance/: lib.rs
src/oracle_consumer/: lib.rs
src/staking/: Cargo.toml  lib.rs  snapshot.rs
src/token/: lib.rs
src/upgradeable/: lib.rs
src/upgradeable/test_snapshots/test/: test_initialize.1.json  test_initialize_twice_panics.1.json  test_set_admin.1.json  test_version.1.json
src/utils/: Cargo.toml  c2c.rs
src/vesting/: Cargo.toml  lib.rs
