[package]
name = "anchorpoint-auth"
version = "0.1.0"
edition = "2021"
description = "Universal modular RBAC for Soroban contracts"

[dependencies]
soroban-sdk = "22.0.0"

[lib]
name = "anchorpoint_auth"
path = "rbac.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
