[package]
name = "anchorpoint-batch-executor"
version = "0.1.0"
edition = "2021"
description = "Helper contract to execute multiple Soroban calls in a single transaction"

[dependencies]
soroban-sdk = "22.0.0"

[lib]
name = "anchorpoint_batch_executor"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
